# fast-rehnda

./: .gitignore  Cargo.toml  README.md  build.rs
assets/models/Sphere/: UvSphere.glb  UvSphere.gltf
crates/asset_manager/: Cargo.toml
crates/asset_manager/src/: asset_data_loader.rs  asset_handle.rs  asset_server.rs  lib.rs
crates/asset_manager/test_resources/: test_res1.txt
crates/asset_manager/test_resources/subdirectory/: sub_file1.txt
docs/: cap_settings.cap
docs/diagramming/: assets.puml  load_gltf.puml
shaders/src/: blinnphong.frag  brdf_lut.frag  cubemap.frag  cubemap.vert  diffuse_map.frag  egui.frag  egui.vert  gooch.frag  non_textured.frag  pbr.frag  prefilter.frag  screen_quad.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  unlit.frag
src/: application.rs  ecs_engine.rs  etna_engine.rs  main.rs
src/assets/: asset_manager.rs  asset_manager_internal.rs  camera.rs  cube.rs  demo_scenes.rs  gltf_loader.rs  light_source.rs  material_server.rs  mod.rs  render_object.rs  shader_compiler.rs  skybox.rs  vertex.rs
src/core/: long_lived_ptr.rs  math.rs  mod.rs
src/etna/: aggregate_commands.rs  buffer.rs  command_pool.rs  debug.rs  device.rs  frame_renderer.rs  graphical_settings.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  vkinit.rs
src/etna/images/: cube_map.rs  depth_buffer.rs  image.rs  mod.rs  texture.rs
src/etna/material_pipeline/: basic.rs  descriptor_allocator.rs  descriptor_builder.rs  descriptor_layout_cache.rs  descriptor_manager.rs  material_pipeline.rs  mod.rs
src/etna/pipelines/: basic.rs  descriptor_allocator.rs  descriptor_builder.rs  descriptor_layout_cache.rs  descriptor_manager.rs  mod.rs  pipeline.rs
src/model/: mod.rs  model.rs  transformation.rs  vertex.rs
src/rehnda_core/: color.rs  input.rs  long_lived_ptr.rs  math.rs  mod.rs
src/rvk/: debug.rs  device.rs  instance.rs  mod.rs  surface.rs  utility.rs
src/scene/: asset_manager.rs  camera.rs  demo_scenes.rs  gltf_loader.rs  mod.rs  model.rs  render_object.rs  scene.rs  scene_builder.rs  vertex.rs
src/ui/: mod.rs  rehnda_ui.rs  ui.rs  ui_painter.rs  ui_pipeline.rs  ui_resources.rs  ui_runner.rs
