[package]
name = "fast-rehnda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2", default_features = false, features = ["linked", "debug"] }
ash-window = "0.12.0"
glam = "0.22"
winit = "0.27.5"
raw-window-handle = "0.5.0"
once_cell = "1.17.0"
memoffset = "0.8.0"

log = "0.4"
simplelog = "0.12"

[build-dependencies]
shaderc = "0.8.2"
glob = "0.3.1"
