[package]
name = "fast-rehnda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# windowing
winit = "0.28.1"
raw-window-handle = "0.5.0"
# Graphics programming
ash = { version = "0.37.2", default_features = false, features = ["linked", "debug"] }
ash-window = "0.12.0"
gpu-allocator = "0.22.0"
image = "0.24.5"
tobj = "3.2.4"
memoffset = "0.8.0"
bytemuck = "1.13.0"
bytemuck_derive = "1.4.0"
# Maths
glam = { version = "0.22", features = ["bytemuck"] }
# UI
egui = { version = "0.21.0", features = ["bytemuck"] }
egui-winit = "0.21.1"
# Game frameworks
bevy_app = "0.10.0"
bevy_ecs = "0.10.0"
bevy_time = "0.10.0"
# assets
gltf = "1.1.0"

# Utilities
once_cell = "1.17.0"
log = "0.4"
simplelog = "0.12"
lazy_static = "1.4.0"
ahash = "0.8.3"
urlencoding = "2.1.2"

[build-dependencies]
shaderc = "0.8.2"
glob = "0.3.1"

[profile.dev.package."*"] # Set the default for dependencies in Development mode.
opt-level = 3